--- a/partials/restaurant.html
+++ b/partials/restaurant.html
@@ -8,7 +8,7 @@
         <span class="glyphicon glyphicon-user" aria-hidden="true"></span>
         <span class="sr-only">name</span>
     </h1>
-    <div class="input-group col-md-6 col-centered">
+    <div class="input-group col-xs-6 col-centered">
         <span class="input-group-addon">Your name</span>
         <input type="text" class="form-control" placeholder="Bartolomé de las Casas" ng-model="orderName">
     </div>
@@ -21,60 +21,65 @@
         <span class="sr-only">order</span>
     </h1>
 
-    <div class="space text-center">
-        <label type="button" class="btn btn-success" ng-click="orders.push({size: 'small'})">
+    <div class="space">
+        <label type="button" class="btn btn-success" ng-click="orders.push({size: 'small',amount: 1})">
             <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             <span class="sr-only">add</span>
         </label>
     </div>
 
-
-
-
-
-
-
     <div class="show-grid space highlight" ng-repeat="order in orders">
         <div class="row">
-            <div class="btn-group space  col-md-8 col-md-offset-2">
+        <div class="col-xs-1">
+                <label type="button" class="btn btn-danger text-center" ng-click="orders = orders.splice($index,1)">
+                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+                    <span class="sr-only">delete</span>
+                </label>
+                </div><div class="col-xs-2">
+                <div class="input-group">
+                    <span class="input-group-addon">amount</span>
+                    <input type="number" class="form-control" placeholder="" min="1" ng-model="order.amount" ng-change="calcPrice(order)">
+                </div>
+                </div>
+            <div class="btn-group col-xs-8">
                 <label class="btn btn-default additional-stuff" ng-class="getSize(config.menu.drinks.length)" ng-model="order.drink" btn-radio="drink.name" uncheckable ng-repeat="drink in config.menu.drinks" ng-change="calcPrice(order)">{{drink.name}}</label>
             </div>
         </div>
         <div class="row">
-            <div class="space col-md-1 col-md-offset-1">
+            <div class="space col-xs-2 col-xs-offset-1">
                 <p class="space">Size</p>
             </div>
-            <div class="btn-group space col-md-8">
+            <div class="btn-group space col-xs-8">
 
-                <label class="btn btn-default additional-stuff col-md-4" ng-model="order.size" btn-radio="size" uncheckable ng-repeat="size in ['small','medium','large']" ng-change="calcPrice(order)">{{size}}</label>
+                <label class="btn btn-default additional-stuff col-xs-4" ng-model="order.size" btn-radio="size" uncheckable ng-repeat="size in ['small','medium','large']" ng-change="calcPrice(order)">{{size}}</label>
             </div>
         </div>
         <div class="row">
-            <div class="space col-md-1 col-md-offset-1">
+            <div class="space col-xs-2 col-xs-offset-1">
                 <p class="space">Chocolate</p>
             </div>
-            <div class="btn-group space col-md-8">
+            <div class="btn-group space col-xs-8">
                 <label class="btn btn-default additional-stuff" ng-class="getSize(config.menu.chocolates.length)" ng-model="order.chocolate" btn-radio="chocolate.name" uncheckable ng-repeat="chocolate in config.menu.chocolates" ng-change="calcPrice(order)">{{chocolate.name}}</label>
             </div>
         </div>
         <div class="row">
-            <div class="space col-md-1 col-md-offset-1">
+            <div class="space col-xs-2 col-xs-offset-1">
                 <p class="space">Milk</p>
             </div>
-            <div class="btn-group space col-md-8">
+            <div class="btn-group space col-xs-8">
                 <label type="button" class="btn btn-default additional-stuff" ng-class="getSize(config.menu.milks.length)" btn-checkbox ng-model="order.milk[milk.name]" ng-repeat="milk in config.menu.milks" ng-change="calcPrice(order)">{{milk.name}}</label>
             </div>
         </div>
         <div class="row">
-            <div class="space col-md-1 col-md-offset-1">
+            <div class="space col-xs-2 col-xs-offset-1">
                 <p class="space">Flavor</p>
             </div>
-            <div class="space col-md-8">
+            <div class="space col-xs-8">
                 <label type="button" class="btn btn-default additional-stuff" ng-class="getSize(config.menu.flavors.length)" btn-checkbox ng-model="order.flavor[flavor.name]" ng-repeat="flavor in config.menu.flavors" ng-change="calcPrice(order)">{{flavor.name}}</label>
             </div>
         </div>
         <div class="row">
-            <form class="form-inline space col-md-8 col-md-offset-2" role="form">
+            <form class="form-inline space col-xs-8 col-xs-offset-3" role="form">
                 <div class="form-group">
                     <div class="input-group">
                         <div class="input-group-addon">shots</div>
@@ -94,21 +99,16 @@
                 <label type="button" class="btn btn-default additional-stuff" ng-model="order.mod.roomForCream" btn-checkbox>
                     room for cream
                 </label>
-
-                <label type="button" class="btn btn-danger pull-right" ng-click="orders = orders.splice($index,1)">
-                    <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
-                    <span class="sr-only">delete</span>
-                </label>
             </form>
         </div>
         <div class="row">
-            <div class="btn-group space col-md-offset-2 col-md-8">
-                <label class="btn btn-default additional-stuff col-md-6" ng-model="order.position" btn-radio="'to go'" uncheckable>to go</label>
-                <label class="btn btn-default additional-stuff  col-md-6" ng-model="order.position" btn-radio="'for here'" uncheckable>for here</label>
+            <div class="btn-group space col-xs-offset-3 col-xs-8">
+                <label class="btn btn-default additional-stuff col-xs-6" ng-model="order.position" btn-radio="'to go'" uncheckable>to go</label>
+                <label class="btn btn-default additional-stuff  col-xs-6" ng-model="order.position" btn-radio="'for here'" uncheckable>for here</label>
             </div>
         </div>
         <div class="row">
-            <div class="input-group space col-md-offset-2 col-md-8">
+            <div class="input-group space col-xs-offset-3 col-xs-8">
                 <span class="input-group-addon">custom order</span>
                 <input type="text" class="form-control" placeholder="" ng-model="order.comments">
             </div>
@@ -133,25 +133,36 @@
 </div>
 
 <div class="section " id="confirm">
-    <div class="receipt col-md-offset-3 col-md-6">
+    <div class="receipt col-xs-offset-3 col-xs-6">
         <h2 class="text-center">{{orderName}}</h2>
         <p class="text-center">Today at {{determineTime(pickupTime)}}</p>
         <div ng-repeat="order in orders">
             <div class="row">
-                <div class="col-md-8">{{order.size}} {{order.temp}} {{determineShotPlurality(order.extraShots)}} {{order.chocolate ? order.chocolate+' chocolate' : ''}} {{order.drink}} {{order.position}}
+                <div class="col-xs-8">({{order.amount}}) {{order.size}} {{order.temp}} {{determineShotPlurality(order.extraShots)}} {{order.chocolate ? order.chocolate+' chocolate' : ''}} {{order.drink}} {{order.position}}
                 </div>
 
-                <div class="col-md-4 text-right">
+                <div class="col-xs-4 text-right">
                     ${{order.price || '0.00'}}
                 </div>
             </div>
+            <div class="text-center">
+                {{order.comments}}
+            </div>
             <div class="row">
-                <ul class="col-md-offset-3 col-md-4">
-                    <li ng-repeat="(flavor,value) in order.flavor">{{value?flavor:''}}</li>
-                </ul>
-                <ul class="col-md-4">
-                    <li ng-repeat="(milk,value) in order.milk">{{value?milk:''}}</li>
-                </ul>
+                <div class="col-xs-offset-3 col-xs-4">
+                    <div ng-repeat="(flavor,value) in order.flavor">{{value?flavor:''}}</div>
+                </div>
+                <div class="col-xs-4">
+                    <div ng-repeat="(milk,value) in order.milk | filter:'value === true'">{{value?milk:''}}</div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-offset-3 col-xs-4">
+                    {{order.mod.extraFoam ? 'extra foam': '' }}
+                </div>
+                <div class="col-xs-4">
+                    {{order.mod.roomForCream ? 'room for cream': '' }}
+                </div>
             </div>
 
         </div>
