--- a/partials/restaurant.html
+++ b/partials/restaurant.html
@@ -1,4 +1,4 @@
-<div class="section" id="location">
+<!-- <div class="section" id="location">
     <h2 class="text-center">{{restaurant || 'Sorry, no restaurants under that name'}}</h2>
     <h3 class="text-center">{{location || 'No location chosen'}}</h3>
 </div>
@@ -13,7 +13,7 @@
         <input type="text" class="form-control" placeholder="Bartolomé de las Casas" ng-model="orderName">
     </div>
 </div>
-
+ -->
 <div class="section" id="order">
 
     <h1 class="text-center">
@@ -30,52 +30,70 @@
 
     <div class="show-grid space highlight" ng-repeat="order in orders">
         <div class="row">
-        <div class="col-md-1">
+            <div class="col-md-1 space">
                 <label type="button" class="btn btn-danger text-center" ng-click="orders = orders.splice($index,1)">
                     <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
                     <span class="sr-only">delete</span>
                 </label>
-                </div><div class="col-md-2">
-                <div class="input-group col-xs-6">
-                    <span class="input-group-addon">amount</span>
-                    <input type="number" class="form-control" placeholder="" min="1" ng-model="order.amount" ng-change="calcPrice(order)">
-                </div>
-                </div>
-            <div class="btn-group col-md-8">
-                <label class="btn btn-default additional-stuff" ng-class="getSize(config.menu.drinks.length)" ng-model="order.drink" btn-radio="drink.name" uncheckable ng-repeat="drink in config.menu.drinks" ng-change="calcPrice(order)">{{drink.name}}</label>
             </div>
-        </div>
-        <div class="row">
-            <div class="space col-md-2 col-md-offset-1">
-                <p class="space">Size</p>
-            </div>
-            <div class="btn-group space col-md-8">
+            <div class="col-md-2">
+                <div class="well well-xs clearfix">
+                    <div class="input-group">
 
-                <label class="btn btn-default additional-stuff col-md-4" ng-model="order.size" btn-radio="size" uncheckable ng-repeat="size in ['small','medium','large']" ng-change="calcPrice(order)">{{size}}</label>
+                        <span class="input-group-addon">#</span>
+                        <input type="number" class="form-control" placeholder="" min="1" ng-model="order.amount" ng-change="calcPrice(order)">
+                    </div>
+                </div>
+            </div>
+            <div class="btn-group col-md-8 col-xs-12">
+                <div class="well well-xs clearfix">
+                    <label class="btn btn-default col-xs-6 " ng-class="getSize(config.menu.drinks.length)" ng-model="order.drink" btn-radio="drink.name" uncheckable ng-repeat="drink in config.menu.drinks" ng-change="calcPrice(order)">{{drink.name}}</label>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="space col-md-2 col-md-offset-1">
-                <p class="space">Chocolate</p>
+            <div class=" col-md-2 col-md-offset-1">
+                <p class="hidden-xs space">Size</p>
             </div>
-            <div class="btn-group space col-md-8">
-                <label class="btn btn-default additional-stuff" ng-class="getSize(config.menu.chocolates.length)" ng-model="order.chocolate" btn-radio="chocolate.name" uncheckable ng-repeat="chocolate in config.menu.chocolates" ng-change="calcPrice(order)">{{chocolate.name}}</label>
-            </div>
-        </div>
-        <div class="row">
-            <div class="space col-md-2 col-md-offset-1">
-                <p class="space">Milk</p>
-            </div>
-            <div class="btn-group space col-md-8">
-                <label type="button" class="btn btn-default additional-stuff" ng-class="getSize(config.menu.milks.length)" btn-checkbox ng-model="order.milk[milk.name]" ng-repeat="milk in config.menu.milks" ng-change="calcPrice(order)">{{milk.name}}</label>
+            <div class="btn-group  col-md-8 col-xs-12">
+                <div class="well well-xs clearfix">
+                    <div class="visible-xs-block">Size</div>
+                    <label class="btn btn-default additional-stuff col-md-4 col-xs-4" ng-model="order.size" btn-radio="size" uncheckable ng-repeat="size in ['small','medium','large']" ng-change="calcPrice(order)">{{size}}</label>
+                </div>
             </div>
         </div>
         <div class="row">
-            <div class="space col-md-2 col-md-offset-1">
-                <p class="space">Flavor</p>
+            <div class="col-md-2 col-md-offset-1">
+                <p class="hidden-xs space">Chocolate</p>
             </div>
-            <div class="space col-md-8">
-                <label type="button" class="btn btn-default additional-stuff" ng-class="getSize(config.menu.flavors.length)" btn-checkbox ng-model="order.flavor[flavor.name]" ng-repeat="flavor in config.menu.flavors" ng-change="calcPrice(order)">{{flavor.name}}</label>
+            <div class="btn-group col-md-8 col-xs-12">
+            <div class="well well-xs clearfix">
+                <div class="visible-xs-block">Chocolate</div>
+                <label class="btn btn-default additional-stuff col-xs-6" ng-class="getSize(config.menu.chocolates.length)" ng-model="order.chocolate" btn-radio="chocolate.name" uncheckable ng-repeat="chocolate in config.menu.chocolates" ng-change="calcPrice(order)">{{chocolate.name}}</label>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-1">
+                <p class="hidden-xs space">Milk</p>
+            </div>
+            <div class="btn-group col-md-8 col-xs-12">
+            <div class="well well-xs clearfix">
+                <div class="visible-xs-block">Milk</div>
+                <label type="button" class="visible-xs-block btn btn-default additional-stuff" ng-class="getSize(config.menu.milks.length)" btn-checkbox ng-model="order.milk[milk.name]" ng-repeat="milk in config.menu.milks" ng-change="calcPrice(order)">{{milk.name}}</label>
+                <label type="button" class="hidden-xs btn btn-default additional-stuff" ng-class="getSize(config.menu.milks.length)" btn-checkbox ng-model="order.milk[milk.name]" ng-repeat="milk in config.menu.milks" ng-change="calcPrice(order)">{{milk.name}}</label>
+            </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-2 col-md-offset-1">
+                <p class="hidden-xs space">Flavor</p>
+            </div>
+            <div class="col-md-8 col-xs-12">
+            <div class="well well-xs clearfix">
+                <div class="visible-xs-block">Flavor</div>
+                <label type="button" class="hidden-xs btn btn-default additional-stuff" ng-class="getSize(config.menu.flavors.length)" btn-checkbox ng-model="order.flavor[flavor.name]" ng-repeat="flavor in config.menu.flavors" ng-change="calcPrice(order)">{{flavor.name}}</label>
+                <label type="button" class="visible-xs-block btn btn-default additional-stuff" ng-class="getSize(config.menu.flavors.length)" btn-checkbox ng-model="order.flavor[flavor.name]" ng-repeat="flavor in config.menu.flavors" ng-change="calcPrice(order)">{{flavor.name}}</label>
             </div>
         </div>
         <div class="row">
@@ -125,7 +143,7 @@
     <timepicker class="col-centered" ng-model="pickupTime" ng-change="verifyTime(pickupTime)"></timepicker>
     <div class="col-centered text-center">
         When will you pick it up?
-        <p class="label label-warning">
+        <p class="label alert-warning">
             <span class="glyphicon glyphicon-bullhorn" aria-hidden="true"></span>
             <span>I scroll!</span>
         </p>
@@ -173,73 +191,73 @@
 </div>
 
 <div class="section " id="pay">
-<div class="container">
-  <form class="form-horizontal" role="form">
-    <fieldset>
-      <legend>Payment</legend>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="card-holder-name">Name on Card</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" name="card-holder-name" id="card-holder-name" placeholder="Card Holder's Name">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="card-number">Card Number</label>
-        <div class="col-sm-9">
-          <input type="text" class="form-control" name="card-number" id="card-number" placeholder="Debit/Credit Card Number">
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="expiry-month">Expiration Date</label>
-        <div class="col-sm-9">
-          <div class="row">
-            <div class="col-md-3">
-              <select class="form-control col-sm-2" name="expiry-month" id="expiry-month">
-                <option>Month</option>
-                <option value="01">Jan (01)</option>
-                <option value="02">Feb (02)</option>
-                <option value="03">Mar (03)</option>
-                <option value="04">Apr (04)</option>
-                <option value="05">May (05)</option>
-                <option value="06">June (06)</option>
-                <option value="07">July (07)</option>
-                <option value="08">Aug (08)</option>
-                <option value="09">Sep (09)</option>
-                <option value="10">Oct (10)</option>
-                <option value="11">Nov (11)</option>
-                <option value="12">Dec (12)</option>
-              </select>
-            </div>
-            <div class="col-md-3">
-              <select class="form-control" name="expiry-year">
-                <option value="13">2013</option>
-                <option value="14">2014</option>
-                <option value="15">2015</option>
-                <option value="16">2016</option>
-                <option value="17">2017</option>
-                <option value="18">2018</option>
-                <option value="19">2019</option>
-                <option value="20">2020</option>
-                <option value="21">2021</option>
-                <option value="22">2022</option>
-                <option value="23">2023</option>
-              </select>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="form-group">
-        <label class="col-sm-3 control-label" for="cvv">Card CVV</label>
-        <div class="col-sm-3">
-          <input type="text" class="form-control" name="cvv" id="cvv" placeholder="Security Code">
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-sm-offset-3 col-sm-9">
-          <button type="button" class="btn btn-success">Pay Now</button>
-        </div>
-      </div>
-    </fieldset>
-  </form>
-</div>
+    <div class="container">
+        <form class="form-horizontal" role="form">
+            <fieldset>
+                <legend>Payment</legend>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label" for="card-holder-name">Name on Card</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" name="card-holder-name" id="card-holder-name" placeholder="Card Holder's Name">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label" for="card-number">Card Number</label>
+                    <div class="col-sm-9">
+                        <input type="text" class="form-control" name="card-number" id="card-number" placeholder="Debit/Credit Card Number">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label" for="expiry-month">Expiration Date</label>
+                    <div class="col-sm-9">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <select class="form-control col-sm-2" name="expiry-month" id="expiry-month">
+                                    <option>Month</option>
+                                    <option value="01">Jan (01)</option>
+                                    <option value="02">Feb (02)</option>
+                                    <option value="03">Mar (03)</option>
+                                    <option value="04">Apr (04)</option>
+                                    <option value="05">May (05)</option>
+                                    <option value="06">June (06)</option>
+                                    <option value="07">July (07)</option>
+                                    <option value="08">Aug (08)</option>
+                                    <option value="09">Sep (09)</option>
+                                    <option value="10">Oct (10)</option>
+                                    <option value="11">Nov (11)</option>
+                                    <option value="12">Dec (12)</option>
+                                </select>
+                            </div>
+                            <div class="col-md-3">
+                                <select class="form-control" name="expiry-year">
+                                    <option value="13">2013</option>
+                                    <option value="14">2014</option>
+                                    <option value="15">2015</option>
+                                    <option value="16">2016</option>
+                                    <option value="17">2017</option>
+                                    <option value="18">2018</option>
+                                    <option value="19">2019</option>
+                                    <option value="20">2020</option>
+                                    <option value="21">2021</option>
+                                    <option value="22">2022</option>
+                                    <option value="23">2023</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="col-sm-3 control-label" for="cvv">Card CVV</label>
+                    <div class="col-sm-3">
+                        <input type="text" class="form-control" name="cvv" id="cvv" placeholder="Security Code">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-3 col-sm-9">
+                        <button type="button" class="btn btn-success">Pay Now</button>
+                    </div>
+                </div>
+            </fieldset>
+        </form>
+    </div>
 </div>
