uncommenting top section of page

--- a/partials/restaurant.html
+++ b/partials/restaurant.html
@@ -1,4 +1,4 @@
-<!-- <div class="section" id="location">
+<div class="section" id="location">
     <h2 class="text-center">{{restaurant || 'Sorry, no restaurants under that name'}}</h2>
     <h3 class="text-center">{{location || 'No location chosen'}}</h3>
 </div>
@@ -13,7 +13,7 @@
         <input type="text" class="form-control" placeholder="Bartolomé de las Casas" ng-model="orderName">
     </div>
 </div>
- -->
+ 
 <div class="section" id="order">
 
     <h1 class="text-center">
