--- a/partials/restaurant.html
+++ b/partials/restaurant.html
@@ -92,7 +92,7 @@
                 <div class="well well-xs clearfix">
                     <div class="visible-xs-block lead">Extra Shots</div>
                     <div class="input-group">
-                        <span class="input-group-addon">Shots</span>
+                        <span class="input-group-addon">+ Shots</span>
                         <input type="number" class="form-control" placeholder="#" max="3" min="0" ng-model="order.extraShots" ng-change="calcPrice(order)">
                     </div>
                 </div>
@@ -135,7 +135,7 @@
     </div>
 </div>
 
-<div class="section " id="confirm">
+<div class="section" id="confirm">
     <div class="receipt col-md-offset-3 col-md-6">
         <h2 class="text-center">{{orderName}}</h2>
         <p class="text-center">Today at {{determineTime(pickupTime)}}</p>
@@ -167,12 +167,28 @@
                     {{order.mod.roomForCream ? 'room for cream': '' }}
                 </div>
             </div>
-
+        </div>
+        <div class="row">
+            <div class=" col-md-2 col-md-offset-1">
+                <div class="hidden-xs text-right space lead">Tip</div>
+            </div>
+            <div class="btn-group  col-md-8 col-xs-12">
+                <div class="well well-xs clearfix">
+                    <div class="visible-xs-block lead">Tip</div>
+                    <label class="btn btn-default additional-stuff col-xs-4" ng-model="tip" btn-radio="'10'" uncheckable>10%</label>
+                    <label class="btn btn-default additional-stuff col-xs-4" ng-model="tip" btn-radio="'15'" uncheckable>15%</label>
+                    <label class="btn btn-default additional-stuff col-xs-4" ng-model="tip" btn-radio="'20'" uncheckable>20%</label>
+                </div>
+            </div>
         </div>
         <div class="text-center lead">
-            ${{getTotal(orders)}}
+            ${{getTotal(orders, tip || 0)}}
         </div>
     </div>
+</div>
+
+<div class="section">
+
 </div>
 
 <div class="section " id="pay">
